--- a/Konsep This Pada Arrow Function/index.html
+++ b/Konsep This Pada Arrow Function/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tutorial JavaScript Lanjutan</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="box"></div>
     <script src="script.js"></script>
 </body>
 
